# cms_cinema

./: README.md  pyproject.toml  requirements.txt
cinema/: .env
cinema/cinema/: celery.py  settings.py  urls.py
cinema/cms/: admin.py  forms.py  models.py  task.py  translation.py  urls.py  views.py
cinema/cms/migrations/: 0001_initial.py  0002_auto_20220124_1817.py  0003_auto_20220124_1824.py  0004_auto_20220130_1357.py  0005_auto_20220202_1447.py  0006_auto_20220202_1514.py  0007_auto_20220202_1629.py  0008_auto_20220212_1802.py  0009_auto_20220212_1807.py  0010_auto_20220212_1932.py  0011_auto_20220219_2305.py  0012_auto_20220222_1441.py  0013_auto_20220222_1459.py  0014_auto_20220301_2013.py  0015_auto_20220301_2200.py  0016_auto_20220301_2307.py  0017_movies_date_premier.py  0018_auto_20220303_1446.py  0019_auto_20220307_1750.py  0020_auto_20220308_1826.py  0021_auto_20220308_2312.py  0022_alter_backgroundbanner_type.py  0023_alter_backgroundbanner_type.py  0024_carouselbanner.py  0025_auto_20220309_1234.py  0026_auto_20220314_1920.py  0027_client_date.py  0028_auto_20220318_2112.py  0029_alter_client_date.py  (+2 more)
cinema/main/: urls.py  views.py
cinema/user/: forms.py  managers.py  models.py  views.py
cms/: models.py
cms/migrations/: 0001_initial.py
config/: settings.py  urls.py
main/: main_language.py  translation.py  urls.py  views.py
main/templatetags/: index.py
user/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers_user_groups_user_is_superuser_and_more.py
(+124 files in other folders)
